samples/_failures_safe/1761402470_67aef0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a7f2d99.c: In function ‘main’:
./samples/SAFE/__tmp_8a7f2d99.c:154:22: error: ‘decompressed_b’ undeclared (first use in this function); did you mean ‘decompressed_buf’?
  154 |         buffer_free(&decompressed_b
      |                      ^~~~~~~~~~~~~~
      |                      decompressed_buf
./samples/SAFE/__tmp_8a7f2d99.c:154:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8a7f2d99.c:154:36: error: expected ‘)’ at end of input
  154 |         buffer_free(&decompressed_b
      |                    ~               ^
      |                                    )
./samples/SAFE/__tmp_8a7f2d99.c:154:9: error: expected declaration or statement at end of input
  154 |         buffer_free(&decompressed_b
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8a7f2d99.c:154:9: error: expected declaration or statement at end of input
